--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "jim"]
 	path = jim
 	url = https://github.com/MKamelll/jim.git
+[submodule "app/src/main/java/jim"]
+	path = app/src/main/java/jim
+	url = https://github.com/MKamelll/jim.git
